@@ -1,4 +1,4 @@
-# This file was generated by Rcpp::compileAttributes
+# Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
 #' Retrieve all configuration settings
@@ -17,10 +17,12 @@
 #' @author Dirk Eddelbuettel
 #' @seealso \code{\link{getConfig}}
 #' @examples
-#' head(getAll(), 30)
-#' subset(getAll(), type=="path")
+#' if (Sys.info()[["sysname"]] != "SunOS") {
+#'     head(getAll(), 30)
+#'     subset(getAll(), type=="path")
+#' }
 getAll <- function(path = ".") {
-    .Call('RcppGetconf_getAll', PACKAGE = 'RcppGetconf', path)
+    .Call('_RcppGetconf_getAll', PACKAGE = 'RcppGetconf', path)
 }
 
 #' Retrieve one configuration setting
@@ -40,10 +42,12 @@ getAll <- function(path = ".") {
 #' @author Dirk Eddelbuettel
 #' @seealso \code{\link{getAll}}
 #' @examples
-#' getConfig("_NPROCESSORS_CONF")   # number of processor
-#' getConfig("LEVEL1_ICACHE_SIZE")  # leve1 cache size
-#' getConfig("GNU_LIBC_VERSION")    # libc version
+#' if (Sys.info()[["sysname"]] != "SunOS") {
+#'     getConfig("_NPROCESSORS_CONF")   # number of processor
+#'     getConfig("LEVEL1_ICACHE_SIZE")  # leve1 cache size
+#'     getConfig("GNU_LIBC_VERSION")    # libc version
+#' }
 getConfig <- function(var, path = ".") {
-    .Call('RcppGetconf_getConfig', PACKAGE = 'RcppGetconf', var, path)
+    .Call('_RcppGetconf_getConfig', PACKAGE = 'RcppGetconf', var, path)
 }
 
