@@ -1,3 +1,11 @@
+2018-11-15  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/getconf.cpp: Do not run examples on Solaris
+	* src/RcppExports.cpp: Updated
+	* R/RcppExports.R: Idem
+	* man/getAll.Rd: Idem
+	* man/getConfig.Rd: Idem
+
 2016-08-01  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version): Release 0.0.2
